--- a/k8s/gitops/addons/istio/deamon.yaml
+++ b/k8s/gitops/addons/istio/deamon.yaml
@@ -19,11 +19,21 @@ spec:
         # Pilot (istiod) configuration
         pilot:
           # Node tolerations for weather-forecast nodepool
-          tolerations:
-            - key: workload
-              operator: Equal
-              value: weather-forecast
-              effect: NoSchedule
+          # tolerations:
+          #   - key: workload
+          #     operator: Equal
+          #     value: weather-forecast
+          #     effect: NoSchedule
+          nodeSelector:
+            kubernetes.azure.com/mode: system
+
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
           
           # Sidecar injector webhook configuration
           sidecarInjectorWebhook:
@@ -36,9 +46,25 @@ spec:
         global:
           # Istio namespace
           istioNamespace: istio-system
-          
           # Configure validation webhook
           configValidation: true
+        
+        meshConfig:
+          # necessary for emitting tracing metrics for open telemetry collector
+          enableTracing: true
+          defaultProviders:
+            tracing:
+              - otel
+          extensionProviders:
+            - name: otel
+              opentelemetry:
+                service: otlp-collector-opentelemetry-collector.monitoring.svc.cluster.local
+                port: 4317
+          defaultConfig:
+            tracing:
+              # all requests are sent
+              # use a lower percentage for production (10 per cent f.e)
+              sampling: 100.0
           
   destination:
     server: https://kubernetes.default.svc
