--- a/k8s/gitops/addons/kiali/application.yaml
+++ b/k8s/gitops/addons/kiali/application.yaml
@@ -16,11 +16,14 @@ spec:
         deployment:
           accessible_namespaces:
             - "**"
-          tolerations:
-            - key: "workload"
-              operator: "Equal"
-              value: "weather-forecast"
-              effect: "NoSchedule"
+          # tolerations:
+          #   - key: "workload"
+          #     operator: "Equal"
+          #     value: "weather-forecast"
+          #     effect: "NoSchedule"
+          nodeSelector:
+            kubernetes.azure.com/mode: system
+            
           view_only_mode: false
 
           logger:
