--- a/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
+++ b/k8s/manifests/tools/htg/deployment_heavy-traffic-geenrator.yaml
@@ -21,6 +21,14 @@ spec:
       annotations:
         sidecar.istio.io/inject: "true"
     spec:
+      tolerations:
+      - key: workload
+        operator: 'Equal'
+        value: 'weather-forecast'
+        effect: 'NoSchedule'
+      nodeSelector:
+            kubernetes.azure.com/mode: user
+
       containers:
       - name: generator
         image: ghcr.io/nicholasjackson/fake-service:v0.26.0
