--- a/k8s/gitops/bootstrap/application.yaml
+++ b/k8s/gitops/bootstrap/application.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
-    targetRevision: develop
+    targetRevision: feature/42
     path: k8s/gitops
   destination:
     server: https://kubernetes.default.svc
