--- a/.github/workflows/pull-requests_insights-bff-codeql-analysis.yml
+++ b/.github/workflows/pull-requests_insights-bff-codeql-analysis.yml
@@ -1,4 +1,4 @@
-name: CodeQL Analysis - WeatherForecastAPI
+name: CodeQL Analysis - Insights Bff
 
 on:
     push:
@@ -13,7 +13,7 @@ on:
 
 jobs:
     codeQLAnalysis-backend:
-        name: Weather Forecast - CodeQL Analysis
+        name: Insights Bff - CodeQL Analysis
         runs-on: ubuntu-latest
         permissions:
             actions: read
