--- a/k8s/manifests/insights/bff/deployment.yaml
+++ b/k8s/manifests/insights/bff/deployment.yaml
@@ -50,7 +50,7 @@ spec:
       # can be multiple containers since one pod scan contain multiple containers
       - name: insights-bff
         # test image from docker registry, provided by nginx project
-        image: acrdevtshpwn.azurecr.io/insights-bff:0.1.0-singleNodePool.1-55a41ad
+        image: acrdevtshpwn.azurecr.io/insights-bff:0.1.0-PullRequest0083.417-9c6ad1e
         # mounting config file
         volumeMounts:
           - name: config
