core: add retention for prometheus metrics to cleanup old metrics that are based on old workload names.

--- a/k8s/gitops/addons/prometheus/application.yaml
+++ b/k8s/gitops/addons/prometheus/application.yaml
@@ -20,6 +20,10 @@ spec:
           prometheusSpec:
             enableAdminAPI: true
             logLevel: debug
+            # we remove all metrics that exceed 5d old
+            retention: 5d
+            # size based retention too for not exceeding allowed quotas
+            retentionSize: "10GB"
             additionalAgs:
               - --log.level=debug
             # tolerations:
