core: rename wf imports to import core: label promtail under grafana stack core: isGrafana true label to stack: grafana. Same for isIstio: true, to stack: istio. core: testing wf import for 23 to 25 January (all working fine).

--- a/k8s/gitops/addons/grafana/database.yaml
+++ b/k8s/gitops/addons/grafana/database.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: argocd
   labels:
     workload: operations
-    isGrafana: "true"
-    isDatabase: "true"
+    stack: grafana
+    workload-type: database
   annotations:
     argocd.argoproj.io/sync-wave: "10"
 spec:
