--- a/k8s/gitops/addons/istio/crds.yaml
+++ b/k8s/gitops/addons/istio/crds.yaml
@@ -7,8 +7,8 @@ metadata:
   name: istio-base
   namespace: argocd
   labels:
-    isIstio: "true"
     workload: operations
+    stack: istio
   annotations:
     argocd.argoproj.io/sync-wave: "0"   # I need crds to exist before deamon
 spec:
