--- a/k8s/gitops/addons/grafana/application.yaml
+++ b/k8s/gitops/addons/grafana/application.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   labels:
     workload: operations
-    isGrafana: "true"
+    stack: grafana
   annotations:
     argocd.argoproj.io/sync-wave: "16" # Install grafana at the last step after all dependencies are installed
 spec:
