--- a/k8s/gitops/addons/istio/ingress.yaml
+++ b/k8s/gitops/addons/istio/ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: istio-ingressgateway
   namespace: argocd
   labels:
-    isIstio: "true"
     workload: operations
+    stack: istio
   annotations:
     argocd.argoproj.io/sync-wave: "2" # Install istio gateway after istio deamon (ranked 0) and istio crds (ranked 1) in order
 spec:
