--- a/k8s/gitops/addons/istio/podmonitors.yaml
+++ b/k8s/gitops/addons/istio/podmonitors.yaml
@@ -4,8 +4,8 @@ metadata:
   name: istio-prometheus-podmonitors
   namespace: argocd
   labels:
-    isIstio: "true"
     workload: operations
+    stack: istio
   annotations:
     argocd.argoproj.io/sync-wave: "3"   # Install monitors after istio deamon, crds and ingress
 spec:
