--- a/k8s/gitops/addons/loki/application.yaml
+++ b/k8s/gitops/addons/loki/application.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   labels:
     workload: operations
-    isGrafana: "true"
+    stack: grafana
   annotations:
     argocd.argoproj.io/sync-wave: "15" # Deploy loki gateway just before grafana starts
 spec:
