--- a/src/master-data/staging/docker-compose.yml
+++ b/src/master-data/staging/docker-compose.yml
@@ -1,44 +1,4 @@
 services:
-  redis:
-    image: redis:latest
-    container_name: redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./data/redis-dump.rdb:/data/dump.rdb
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
-  insights-bff:
-    build:
-      context: ./insights/bff
-      dockerfile: Dockerfile
-    container_name: insights-bff
-    depends_on:
-      - redis
-    environment:
-      WeatherForecast__Redis__ReadDbConnection: "redis:6379,abortConnect=false,connectTimeout=10000,syncTimeout=10000"
-      WeatherForecast__Redis__WriteDbConnection: "redis:6379,abortConnect=false,connectTimeout=10000,syncTimeout=10000"
-      ASPNETCORE_ENVIRONMENT: "Development"
-    ports:
-      - "5000:80"
-    restart: always
-    command: ["/app/wait-for.sh", "redis", "6379", "dotnet", "WeatherForecast.Api.dll"]
-  insights-frontend:
-    build:
-      context: ./insights/frontend
-      dockerfile: Dockerfile
-    depends_on:
-      - insights-bff
-    environment:
-      # Point frontend to backend container
-      BACKEND_URL: "http://localhost:5000"
-    container_name: insights-frontend
-    ports:
-      - "8080:80"
-    restart: always
   masterdata-postgres:
     image: postgres:15-alpine
     environment:
@@ -56,10 +16,11 @@ services:
     # using flyway migration docker image that we pull from dockerhub
     image: flyway/flyway:9
     depends_on:
-      - masterdata-postgres
+      masterdata-postgres:
+        condition: service_healthy
     volumes:
-      # we mount the local master-data/data/migrations folder to flyway/sql folder
-      - ./master-data/data/migrations:/flyway/sql
+      # we mount the local data/migrations folder to flyway/sql folder
+      - ../data/migrations:/flyway/sql
     # we point to the local postgres db
     command: -url=jdbc:postgresql://masterdata-postgres:5432/master_data -user=postgres -password=postgres migrate
     # very important in order to execute migration only once
@@ -68,44 +29,55 @@ services:
     tty: true
     stdin_open: true
     build:
-      context: ./master-data/staging
+      context: ./
       dockerfile: Dockerfile.cities-initializer
     depends_on:
-      - masterdata-postgres
+      masterdata-postgres:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
     environment:
       - POSTGRES_DSN=postgresql://postgres:postgres@masterdata-postgres:5432/master_data?sslmode=disable
     volumes:
       # mount the local file in the image and mark it as read only
-      - ./master-data/data/imports:/data:ro
+      - ./data/imports:/data:ro
     command: ["--input", "/data/capitals.csv"]
-    ports:
-      - "8080:8001"
     # the init script needs to be ran once
     restart: "no"
   wf-actuals-import:
     tty: true
     stdin_open: true
     build:
-      context: ./master-data/staging
+      context: ./
       dockerfile: Dockerfile.wf-actuals-initializer
     depends_on:
-      - masterdata-postgres
+      masterdata-postgres:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
+      cities-import:
+        condition: service_completed_successfully
     environment:
       - POSTGRES_DSN=postgresql://postgres:postgres@masterdata-postgres:5432/master_data?sslmode=disable
     volumes:
-      - ./master-data/data/imports:/data:ro
+      - ./data/imports:/data:ro
     command: ["--input", "/data/weather_hourly-full.csv"]
-    ports:
-      - "8080:8002"
     restart: "no"
   wf-actuals-range-db-import:
+    profiles:
+      - manual
     tty: true
     stdin_open: true
     build:
-      context: ./master-data/staging
+      context: ./
       dockerfile: Dockerfile.wf-actuals-range
     depends_on:
-        - masterdata-postgres
+      masterdata-postgres:
+        condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
+      cities-import:
+        condition: service_completed_successfully
     environment:
       - POSTGRES_DSN=postgresql://postgres:postgres@masterdata-postgres:5432/master_data?sslmode=disable
     command:
@@ -113,8 +85,6 @@ services:
       - "${FROM_DATE:-2026-01-01}"
       - "--to-date"
       - "${TO_DATE:-2026-01-02}"
-    ports:
-      - "8080:8003"
     restart: "no"
 
 # necessary for postgres persistence
