--- a/.github/workflows/template_codecov-dotnet.yml
+++ b/.github/workflows/template_codecov-dotnet.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
     calculate-coverage:
-      name: Backend Status Check - Run Unit Tests
+      name: C Sharp Status Check - Run Unit Tests
       runs-on: ubuntu-latest
       steps:
         - name: Checkout repo
