--- a/.github/workflows/template_ci.yml
+++ b/.github/workflows/template_ci.yml
@@ -14,6 +14,10 @@ on:
             gitversion_config_path:
               required: true
               type: string
+            dockerfile_name:
+              required: false
+              type: string
+              default: Dockerfile
         secrets:
           ACR_LOGIN_SERVER:
             required: true
@@ -75,8 +79,9 @@ jobs:
                 password: ${{ secrets.ACR_PASSWORD }}
 
             - name: Build image
+              working-directory: ${{ inputs.service_path }}
               run: |
-                docker build -t $IMAGE ${{ inputs.service_path }}
+                docker build -t $IMAGE -f ${{ inputs.dockerfile_name }} .
                 docker push $IMAGE
 
             -  name: Push image
