--- a/src/insights/docker-compose.yml
+++ b/src/insights/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
-    volumes:
-      - ./data/redis-dump.rdb:/data/dump.rdb
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
@@ -13,8 +11,8 @@ services:
       retries: 10
   insights-bff:
     build:
-      context: ./insights-bff
-      dockerfile: DockerFile
+      context: ./bff
+      dockerfile: Dockerfile
     container_name: insights-bff
     depends_on:
       - redis
@@ -23,18 +21,18 @@ services:
       WeatherForecast__Redis__WriteDbConnection: "redis:6379,abortConnect=false,connectTimeout=10000,syncTimeout=10000"
       ASPNETCORE_ENVIRONMENT: "Development"
     ports:
-      - "5000:80"
+      - "5001:80"
     restart: always
     command: ["/app/wait-for.sh", "redis", "6379", "dotnet", "WeatherForecast.Api.dll"]
   insights-frontend:
     build:
-      context: ./insights-frontend
-      dockerfile: DockerFile
+      context: ./frontend
+      dockerfile: Dockerfile
     depends_on:
       - insights-bff
     environment:
       # Point frontend to backend container
-      BACKEND_URL: "http://localhost:5000"
+      BACKEND_URL: "http://localhost:5001"
     container_name: insights-frontend
     ports:
       - "8080:80"
