core: first manifests enabling storage account connection using Managed Identities

--- a/k8s/manifests/master-data/staging/jobs/cities-import.yaml
+++ b/k8s/manifests/master-data/staging/jobs/cities-import.yaml
@@ -21,8 +21,7 @@ spec:
           mountPath: "/mnt/blob"
           readOnly: true
       volumes:
-      - name: imports-blob
-        persistentVolumeClaim:
-          claimName: pvc-blob
+        - name: imports-blob
+          persistentVolumeClaim:
+            claimName: azure-blob-storage-imports
       restartPolicy: Never
-      dnsPolicy: ClusterFirst
