--- a/k8s/manifests/master-data/staging/pvcs/imports_storage-claim.yaml
+++ b/k8s/manifests/master-data/staging/pvcs/imports_storage-claim.yaml
@@ -12,4 +12,4 @@ spec:
     requests:
       storage: 1Gi
   volumeName: azure-blob-storage-imports
-  storageClassName: managed-csi
+  storageClassName: azureblob-fuse-msi
