--- a/k8s/manifests/master-data/staging/pvc/staging-imports-storage_claim.yaml
+++ b/k8s/manifests/master-data/staging/pvc/staging-imports-storage_claim.yaml
@@ -10,6 +10,8 @@ spec:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      # requests 500 Megabytes
+      storage: 500Mi
   volumeName: azure-blob-storage-imports
+  # References the storage class defined in this same folder
   storageClassName: azureblob-fuse-msi
