core: creating a new volume claim since modifications are prohibited on existing ones.

--- a/k8s/manifests/master-data/staging/kustomization.yaml
+++ b/k8s/manifests/master-data/staging/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
   - job/cities-import.yaml
   - storage-class/imports_storage-account.yaml
   - pvc/staging-imports-storage_claim.yaml
+  - pvc/imports-storage_claim.yaml
