--- a/k8s/manifests/master-data/staging/job/cities-import.yaml
+++ b/k8s/manifests/master-data/staging/job/cities-import.yaml
@@ -23,5 +23,5 @@ spec:
       volumes:
         - name: imports-blob
           persistentVolumeClaim:
-            claimName: azure-blob-storage-imports
+            claimName: az-blob-storage-imports
       restartPolicy: Never
