fix: recreate storage class too

--- a/k8s/manifests/master-data/staging/pvc/imports-storage_claim.yaml
+++ b/k8s/manifests/master-data/staging/pvc/imports-storage_claim.yaml
@@ -11,4 +11,4 @@ spec:
   resources:
     requests:
       storage: 500Mi
-  storageClassName: dev-azureblob-fuse-msi
+  storageClassName: dev-azblob-fuse-msi
