--- a/k8s/manifests/master-data/staging/pvc/imports-storage_claim.yaml
+++ b/k8s/manifests/master-data/staging/pvc/imports-storage_claim.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: az-blob-storage-imports
+  name: pvc-azure-blob-imports
   namespace: backend
   labels:
-    app: az-blob-storage-imports
+    app: pvc-azure-blob-imports
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 500Mi
-  storageClassName: dev-azblob-fuse-msi
+      storage: 1Gi
+  storageClassName: manual-blob-fuse
+  volumeName: pv-azure-blob-imports
